2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (siox_foreground_extract): micro optimizations.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c: do not restart draw tool
	unless shell->proximity.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c
	(gimp_foreground_select_tool_draw): show the extents of the working
	area if the user moves the mouse out of it. Is this useful?
	

	* app/tools/gimpforegroundselectoptions.c: removed colons from labels.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.c: increased default brush
	size and upper limit.

	* app/tools/gimpforegroundselecttool.c: draw a brush outline.

2005-08-06  Manish Singh  <yosh@gimp.org>

	* plug-ins/Makefile.am: remove dbbrowser from SUBDIRS.

2005-08-06  Manish Singh  <yosh@gimp.org>

	* plug-ins/dbbrowser/plugin-browser.c
	* plug-ins/dbbrowser/procedure-browser.c: removed these files...
	
	* plug-ins/common/plugin-browser.c
	* plug-ins/common/procedure-browser.c: ...and added them here.

	* plug-ins/common/mkgen.pl: transform - to _ in makefile variable
	names, and attach optional CFLAGS to only the plugins that need
	them.

	* plug-ins/common/plugin-defs.pl: added plugin-browser and
	procedure-browser, and changed poppler, svg, and wmf to use the new
	CFLAGS stuff.

	* plug-ins/common/.cvsignore
	* plug-ins/common/Makefile.am: regenerated.

	* configure.in: remove plug-ins/dbbrowser reference.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/base/siox.[ch]: reordered parameters to match the order of
	parameters in gimp_drawable_foreground_extract_siox().

	* app/core/gimpdrawable-foreground-extract.c: changed accordingly.

	* app/tools/gimpforegroundselectoptions.[ch]: draw slider value to
	the right.

	* app/tools/gimpfreeselecttool.[ch]: added
	gimp_free_select_tool_select() to call the virtual select() method.

	* app/tools/gimpforegroundselecttool.[ch]: queue an idle select if